force-app/main/default/objects/Game__c/fields/Game_Rating__c.field-meta.xml
<CustomField>
    <fullName>Game_Rating__c</fullName>
    <description>Place in Top 10 game rating</description>
    <label>Game Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>