force-app/main/default/objects/Game__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date and Time when the game starts</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>