force-app/main/default/objects/Game__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <description>The total money that was earned by totalizator in this game</description>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>