force-app/main/default/objects/Game__c/fields/Total_Money_Bet__c.field-meta.xml
<CustomField>
    <fullName>Total_Money_Bet__c</fullName>
    <label>Total Money Bet</label>
    <summarizedField>Bet__c.Amount__c</summarizedField>
    <summaryForeignKey>Bet__c.Game__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>