force-app/main/default/objects/Game__c/fields/Won_Lot__c.field-meta.xml
<CustomField>
    <fullName>Won_Lot__c</fullName>
    <description>Number of lot, which won the game</description>
    <label>Won Lot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>