force-app/main/default/objects/Game__c/validationRules/StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>(Start_Date__c &lt;  NOW() ) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>Start date - must be in the future.</errorMessage>
</ValidationRule>